--- a/src/ui/src/main/resources/templates/fragments/layout.html
+++ b/src/ui/src/main/resources/templates/fragments/layout.html
@@ -12,6 +12,15 @@
         <link rel="stylesheet" th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}">
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/assets/css/styles.css}">
+                <script>
+          (function(s,t,a,n){s[t]||(s[t]=a,n=s[a]=function(){n.q.push(arguments)},
+          n.q=[],n.v=2,n.l=1*new Date)})(window,"InstanaEumObject","ineum");
+        
+          ineum('reportingUrl', 'https://eum-green-saas.instana.io');
+          ineum('key', 'ju1znYPJTwmXrklvnLUnsA');
+          ineum('trackSessions');
+        </script>
+        <script defer crossorigin="anonymous" src="https://eum.instana.io/eum.min.js"></script>
     </head>
     <body class="d-flex flex-column min-vh-100 bg-light">
         <section style="background-color: #e9ecef">
